implemented tb in browser via copy/paste shell script

--- a/nn_tune_diabetes.ipynb
+++ b/nn_tune_diabetes.ipynb
@@ -25,34 +25,22 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 1/1 [01:25<00:00, 85.75s/it]\n"
+            "100%|██████████| 1/1 [00:03<00:00,  3.72s/it]"
           ]
         },
         {
-          "data": {
-            "text/html": [
-              "\n",
-              "      <iframe id=\"tensorboard-frame-adb336855ca4e003\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-              "      </iframe>\n",
-              "      <script>\n",
-              "        (function() {\n",
-              "          const frame = document.getElementById(\"tensorboard-frame-adb336855ca4e003\");\n",
-              "          const url = new URL(\"/\", window.location);\n",
-              "          const port = 6006;\n",
-              "          if (port) {\n",
-              "            url.port = port;\n",
-              "          }\n",
-              "          frame.src = url;\n",
-              "        })();\n",
-              "      </script>\n",
-              "    "
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensorboard --logdir logs_20220606-130014 --port 1300\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
         }
       ],
       "source": [
@@ -85,7 +73,7 @@
         "normed_valid_data = pd.DataFrame(StandardScaler().fit_transform(valid_dataset), columns=valid_dataset.columns, index=valid_dataset.index)\n",
         "x_train, y_train, x_valid, y_valid = normed_train_data, train_labels, normed_valid_data, valid_labels\n",
         "\n",
-        "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([1000]))\n",
+        "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([5]))\n",
         "HP_NUM_LAYERS = hp.HParam('num_layers', hp.Discrete([1]))\n",
         "# HP_DROPOUT = hp.HParam('dropout', hp.RealInterval(0.1, 0.2))\n",
         "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam']))\n",
@@ -134,7 +122,7 @@
         "  model.compile(\n",
         "      optimizer=helper_fct_return_optimizer_w_learn_rate(hparams[HP_OPTIMIZER],hparams[HP_LR],),\n",
         "      loss='BinaryCrossentropy', metrics=['accuracy'],)\n",
-        "  model.fit(x_train, y_train,validation_data=(x_valid,y_valid),epochs=100, shuffle=True,verbose=False, callbacks=[ tf.keras.callbacks.TensorBoard(log_dir=run_dir+'_'+str(hparams[HP_NUM_LAYERS])+'layers_'+str(hparams[HP_NUM_UNITS])+'nodes_'+hparams[HP_OPTIMIZER]+str(hparams[HP_LR])+'_'+str(hparams[HP_BATCH_SIZE])+'batchsize_', histogram_freq=1)],batch_size=(hparams[HP_BATCH_SIZE])) \n",
+        "  model.fit(x_train, y_train,validation_data=(x_valid,y_valid),epochs=1, shuffle=True,verbose=False, callbacks=[ tf.keras.callbacks.TensorBoard(log_dir=run_dir+'_'+str(hparams[HP_NUM_LAYERS])+'layers_'+str(hparams[HP_NUM_UNITS])+'nodes_'+hparams[HP_OPTIMIZER]+str(hparams[HP_LR])+'_'+str(hparams[HP_BATCH_SIZE])+'batchsize_', histogram_freq=1)],batch_size=(hparams[HP_BATCH_SIZE])) \n",
         "  _, accuracy = model.evaluate(x_valid, y_valid,verbose=False)\n",
         "  return accuracy\n",
         "\n",
@@ -155,8 +143,26 @@
         "          run(log_name+ run_name, hparams )\n",
         "          session_num += 1\n",
         "          # problem anschauen dass wenn script druch cpu und memory immer voll\n",
-        "%load_ext tensorboard\n",
-        "%tensorboard --logdir log_name[20]\n"
+        "\n",
+        "# tb in browser:\n",
+        "print(\"tensorboard --logdir \"+log_name[:20]+\" --port \"+log_name[14:18])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensorboard --logdir logs_20220606-124205 --port 1242\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"tensorboard --logdir \"+log_name[:20]+\" --port \"+log_name[14:18])"
       ]
     },
     {
@@ -164,18 +170,14 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "UsageError: Line magic function `%tensorboard` not found."
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "\n"
-      ]
+      "source": []
     }
   ],
   "metadata": {
